--- a/kv/adding-area-screen.kv
+++ b/kv/adding-area-screen.kv
@@ -91,3 +91,15 @@
         size_hint: None, None
         size: "30dp", "30dp"
         on_release: root.show_delete_dialog()
+
+<SectionTitle@MDLabel>
+    # Section title for each Items of the AddingScreen
+    adaptive_height: True
+    size_hint_x: 1
+    text_size: self.size
+    padding: 0, 0, 0, dp(30)
+    halign: 'center'
+    font_style: 'Title'
+    role: 'large'
+    text_color: app.theme_cls.primaryColor
+    bold: True
