--- a/kv/adding-ascent-screen.kv
+++ b/kv/adding-ascent-screen.kv
@@ -38,7 +38,6 @@
                     text: "Grade"
                     leading_icon: "chart-bar"
                     adaptive_size: True
-                    padding: 0, dp(30), 0, dp(10)
 
                 MDDivider:
                     md_bg_color: app.theme_cls.outlineVariantColor
@@ -50,7 +49,6 @@
                     text: "Area"
                     leading_icon: "map-marker"
                     adaptive_size: True
-                    padding: 0, dp(30), 0, dp(10)
 
                 MDDivider:
                     md_bg_color: app.theme_cls.outlineVariantColor
@@ -62,16 +60,30 @@
                     text: "Date"
                     leading_icon: "calendar"
                     adaptive_size: True
-                    padding: 0, dp(30), 0, dp(10)
 
                 MDDivider:
                     md_bg_color: app.theme_cls.outlineVariantColor
                     divider_width: dp(1)
 
                 MDBoxLayout:
+                    adaptive_height: True
+                    padding: 0, dp(30)
+
+                    MDTextField:
+                        id: ascent_form_note
+                        mode: 'filled'
+
+                        MDTextFieldLeadingIcon:
+                            icon: "note"
+                        MDTextFieldHintText:
+                            id: text_field
+                            text: "Note (Optional)"
+                        MDTextFieldMaxLengthText:
+                            max_text_length: 255
+
+                MDBoxLayout:
                     orientation: "horizontal"
                     adaptive_height: True
-                    padding: 0, dp(30), 0, dp(10)
                     spacing: dp(30)
                     Widget:
                     MDButton:
@@ -92,6 +104,8 @@
         spacing: dp(15)
         adaptive_height: True
         adaptive_width: True
+        padding: 0, dp(30), 0, dp(10)
+
 
         MDIcon:
             id: leading_icon
