--- a/kv/list-screen.kv
+++ b/kv/list-screen.kv
@@ -56,7 +56,7 @@
                 style: 'filled'
                 theme_bg_color: 'Custom'
                 md_bg_color: app.theme_cls.secondaryColor
-                on_release: root.manager.current = 'add-ascent'
+                on_release: root.manager.current = 'ascent'
                 MDButtonIcon:
                     icon: 'plus'
                 MDButtonText:
