--- a/kv/screenmanager.kv
+++ b/kv/screenmanager.kv
@@ -17,10 +17,10 @@
         id: screen_manager
         ListScreen:
             name: 'ascents-list'
-        AddingAscentScreen:
-            name: 'add-ascent'
-        AddingAreaScreen:
-            name: 'add-area'
+        AscentScreen:
+            name: 'ascent'
+        AreaScreen:
+            name: 'area'
         StatisticScreen:
             name: 'statistic'
         StatisticFilterScreen:
