--- a/kv/ascent-screen.kv
+++ b/kv/ascent-screen.kv
@@ -1,6 +1,6 @@
 #:kivy 2.3.1
 
-<AddingAscentScreen>
+<AscentScreen>
     md_bg_color: self.theme_cls.backgroundColor
     MDBoxLayout:
         orientation: 'vertical'
