File Renaming - Release v1.0.0 finally finished

--- a/kv/ascent-screen.kv
+++ b/kv/ascent-screen.kv
@@ -9,7 +9,7 @@
             MDTopAppBarLeadingButtonContainer:
                 MDActionTopAppBarButton:
                     icon: "arrow-left"
-                    on_release: root.manager.current = "ascents-list"
+                    on_release: root.manager.current = "ascent-list"
             MDTopAppBarTitle:
                 text: 'Add Ascent' if not root.ascent_to_update_id else 'Update Ascent'
                 text_color: app.theme_cls.primaryColor
