--- a/kv/screenmanager.kv
+++ b/kv/screenmanager.kv
@@ -15,8 +15,8 @@
 
     MDScreenManager:
         id: screen_manager
-        ListScreen:
-            name: 'ascents-list'
+        AscentListScreen:
+            name: 'ascent-list'
         AscentScreen:
             name: 'ascent'
         AreaScreen:
@@ -27,12 +27,14 @@
             name: 'statistic-filter'
         SettingsScreen:
             name: 'settings'
+        # ToDoListScreen:
+        #     name: 'to-do-list'
 
     MDNavigationBar:
         on_switch_tabs: root.on_switch_tabs(args[1])
         BaseMDNavigationItem:
-            name: 'ascents-list'
-            icon: "format-list-bulleted"
+            name: 'ascent-list'
+            icon: "checkbox-marked-outline"
             text: "Ascents"
             active: True
 
@@ -40,6 +42,11 @@
             name: 'statistic'
             icon: "chart-donut-variant"
             text: "Statistic"
+        
+        # BaseMDNavigationItem:
+        #     name: 'to-do-list'
+        #     icon: "format-list-bulleted"
+        #     text: "To-Do List"
 
         BaseMDNavigationItem:
             name: 'settings'
