--- a/kv/screenmanager.kv
+++ b/kv/screenmanager.kv
@@ -27,8 +27,8 @@
             name: 'statistic-filter'
         SettingsScreen:
             name: 'settings'
-        # ToDoListScreen:
-        #     name: 'to-do-list'
+        ToDoListScreen:
+            name: 'to-do-list'
 
     MDNavigationBar:
         on_switch_tabs: root.on_switch_tabs(args[1])
@@ -43,10 +43,10 @@
             icon: "chart-donut-variant"
             text: "Statistic"
         
-        # BaseMDNavigationItem:
-        #     name: 'to-do-list'
-        #     icon: "format-list-bulleted"
-        #     text: "To-Do List"
+        BaseMDNavigationItem:
+            name: 'to-do-list'
+            icon: "format-list-bulleted"
+            text: "To-Do List"
 
         BaseMDNavigationItem:
             name: 'settings'
