Alembic migrations currently not working. Waiting for answers on Reddit and StackOverflow to see if anything is doable. In the meantime, adding of DB initialization at startup.

--- a/kv/screenmanager.kv
+++ b/kv/screenmanager.kv
@@ -43,10 +43,10 @@
             icon: "chart-donut-variant"
             text: "Statistic"
         
-        BaseMDNavigationItem:
-            name: 'to-do-list'
-            icon: "format-list-bulleted"
-            text: "To-Do List"
+        # BaseMDNavigationItem:
+        #     name: 'to-do-list'
+        #     icon: "format-list-bulleted"
+        #     text: "To-Do List"
 
         BaseMDNavigationItem:
             name: 'settings'
