--- a/kv/to-do-list-screen.kv
+++ b/kv/to-do-list-screen.kv
@@ -5,3 +5,13 @@
     MDBoxLayout:
         orientation: 'vertical'
         padding: dp(20)
+        MDLabel:
+            text: "Coming Soon"
+            size_hint_x: 1
+            text_size: self.size
+            halign: 'center'
+            valign: 'middle'
+            font_style: 'Title'
+            role: 'large'
+            text_color: app.theme_cls.primaryColor
+            bold: True
