--- a/kv/settings-screen.kv
+++ b/kv/settings-screen.kv
@@ -6,7 +6,7 @@
         padding: dp(20)
         MDList:
             MDListItem:
-                on_release: root.manager.current = 'area'
+                on_release: root.get_area_screen()
                 MDListItemLeadingIcon:
                     icon: "map"
                 MDListItemHeadlineText:
