--- a/kv/statistic-screen.kv
+++ b/kv/statistic-screen.kv
@@ -82,9 +82,9 @@
         MDBoxLayout:
             orientation: 'vertical'
             padding: dp(30)
+            spacing: dp(20)
             CustomTitleLabel:
                 id: filter_display
-                bold: False
                 halign: 'left'
                 font_style: 'Title'
                 role: 'medium'
@@ -100,7 +100,7 @@
             Widget:
         MDFabButton:
             icon: "filter-outline"
-            pos_hint: {"right": 0.8, "y": 0.03}
+            pos_hint: {"right": 0.92, "y": 0.03}
             on_release: root.manager.current = 'statistic-filter'
             color_map: 'secondary'
             theme_icon_color: 'Custom'
