--- a/kv/ascent-list-screen.kv
+++ b/kv/ascent-list-screen.kv
@@ -124,3 +124,28 @@
     MDLabel:
         text: root.label
         adaptive_height: True
+        allow_copy: True
+
+<DialogScrollableItem>
+    orientation: 'horizontal'
+    adaptive_height: True
+    spacing: dp(20)
+
+    MDIcon:
+        icon: root.icon
+        adaptive_width: True
+        pos_hint: {"center_y": 0.5}
+        
+    MDBoxLayout:
+        orientation: 'vertical'
+        size_hint_y: None
+        height: min(scroll_content.height, dp(300))
+        MDScrollView:
+            do_scroll_x: False
+            bar_width: dp(10)
+            MDLabel:
+                id: scroll_content
+                text: root.label
+                adaptive_height: True
+                multiline: True
+                allow_copy: True
