--- a/kv/ascent-screen.kv
+++ b/kv/ascent-screen.kv
@@ -69,11 +69,13 @@
                     orientation: 'horizontal'
                     adaptive_height: True
                     padding: 0, dp(30), 0, dp(10)
+                    spacing: dp(20)
 
+                    MDIcon:
+                        icon: "lightning-bolt"
                     MDLabel:
                         text: "Flash"
                         adaptive_size: True
-                        padding: dp(20), 0
                     MDCheckbox:
                         id: ascent_form_flash_checkbox
 
@@ -117,7 +119,7 @@
     id: container
 
     MDBoxLayout:
-        spacing: dp(15)
+        spacing: dp(20)
         adaptive_height: True
         adaptive_width: True
         padding: 0, dp(30), 0, dp(10)
