First draw of pyramid graph

--- a/kv/statistic-screen.kv
+++ b/kv/statistic-screen.kv
@@ -56,6 +56,12 @@
             Table:
                 id: table
                 adaptive_height: True
+            MDBoxLayout:
+                size_hint: 1, None
+                height: dp(200)
+                pos_hint: {"center_x": .5}
+                PopulationPyramid:
+                    size_hint: 1, 1
 
 <GeneralInfoTab>
     orientation: 'vertical'
