--- a/kv/screenmanager.kv
+++ b/kv/screenmanager.kv
@@ -20,7 +20,7 @@
         AscentScreen:
             name: 'ascent'
         LocationScreen:
-            name: 'area'
+            name: 'location'
         StatisticScreen:
             name: 'statistic'
         StatisticFilterScreen:
