--- a/kv/location-screen.kv
+++ b/kv/location-screen.kv
@@ -38,7 +38,7 @@
                     orientation: 'vertical'
                     adaptive_height: True
                     SectionTitle:
-                        text: "Add Area" if root.model_class == Area else "Add Sector"
+                        text: "Add" if not root.ids.location_form.location_to_update else f"Rename {root.ids.location_form.location_to_update.name}"
                     LocationForm:
                         id: location_form
                         model_class: root.model_class
@@ -83,7 +83,7 @@
         MDButton:
             on_release: root.submit()
             MDButtonText:
-                text: "Add"
+                text: "Ok"
 
 <LocationList>
     orientation: 'vertical'
@@ -106,6 +106,14 @@
         bold: True
         font_style: 'Body'
         role: 'medium'
+    MDIconButton:
+        icon: 'pencil-outline'
+        theme_font_size: "Custom"
+        font_size: "20sp"
+        radius: [self.height / 4, ]
+        size_hint: None, None
+        size: "30dp", "30dp"
+        on_release: root.update_location()
     MDIconButton:
         icon: 'delete-outline'
         theme_font_size: "Custom"
