Adding of the ReadMe

--- a/kv/statistic-screen.kv
+++ b/kv/statistic-screen.kv
@@ -49,6 +49,7 @@
 
 <CustomTableTab>
     MDScrollView:
+        do_scroll_x: False
         MDBoxLayout:
             id: tab_scroll_view
             orientation: 'vertical'
